<resources>
    <string name="app_name">LifeOrganizer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tl_main">Life Organizer</string>

    <!-- Buttons -->
    <string name="button_set">Seleccionar</string>
    <string name="button_save">Guardar</string>
    <string name="button_cancel">Cancelar</string>

    <!-- Permisos -->
    <string name="permission_storage">Es necesario guardar en el dispositivo datos para que la app funcione</string>
    <string name="permission_call">Es necesario el permiso de llamar para poder realizar llamadas</string>


    <!--Errores -->
    <string name="message_error_internet">No hay conexión a internet.</string>
    <string name="message_error_get_activities">Hubo un error al recuperar las actividades.</string>
    <string name="message_error_name_empty">El nombre está vacío.</string>
    <string name="message_error_items_empty">No se agregó ningún item.</string>

    <!-- Labels -->
    <string name="label_name">Nombre: </string>
    <string name="label_description">Descripción: </string>
    <string name="label_date">Fecha: </string>
    <string name="label_type">Tipo: </string>
    <string name="label_price">Precio: </string>
    <string name="color_default_summary">Sumario Color</string>
    <string name="color_default_title">Título Color</string>
    <string name="color_title">Color</string>

    <!-- Checkboxs -->
    <string name="checkbox_save_template">Guardar borrador de la actividad</string>


    <!-- Messages -->
    <string name="message_activity_remove_successfully">La Actividad fue eliminada correctamente.</string>
    <string name="message_activity_save_successfully">La Actividad fue guardada correctamente.</string>
    <string name="message_activity_completed_successfully">La Actividad fue completada correctamente.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_description">Descriptión</string>
    <string name="prompt_date">Fecha</string>
    <string name="prompt_quantity">Cantidad</string>
    <string name="prompt_price">Precio</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>


    <!-- Titles -->
    <string name="title_color_picker">Seleciona un color</string>
    <string name="title_item">Item</string>
    <string name="title_activities">Actividades</string>
    <string name="title_activity">Actividad</string>
    <string name="title_activities_completed">Actividades Completadas</string>
    <string name="title_templates">Borradores</string>
    <string name="title_settings">Configuraciones</string>

    <!-- Menu -->
    <string name="menu_activities">Actividades</string>
    <string name="menu_completed_activities">Completadas Actividades</string>
    <string name="menu_templates">Borradores</string>
    <string name="menu_settings">Configuraciones</string>


</resources>
