<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.psm.lifeorganizer.android.fragments.ItemFragment">

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_item" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_item_name"
        android:layout_below="@+id/tv_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:imeActionId="6"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_item_description"
        android:layout_below="@+id/til_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="4"
            style="@style/commonTextarea"
            android:hint="@string/prompt_description"
            android:background="@drawable/textarea"
            android:scrollHorizontally="false"
            android:gravity="top|left"
            android:layout_gravity="top"
            android:maxLength="500"
            />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_item_quantity"
        android:layout_below="@+id/til_item_description"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_item_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_quantity"
                android:imeActionId="6"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="100"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item_price"
        android:layout_below="@+id/ll_item_quantity"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_price"
                android:imeActionId="6"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:maxLength="100"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item_buttons"
        android:layout_below="@+id/ll_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_save_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/bt_cancel_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />

    </LinearLayout>

</RelativeLayout>
