<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="com.psm.lifeorganizer.android.fragments.ActivityFragment">

        <TextView
            android:id="@+id/tv_Activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Detalle Actividad" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_activity_name"
            android:layout_below="@+id/tv_Activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_activity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:imeActionId="6"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_activity_description"
            android:layout_below="@+id/til_activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="4"
                style="@style/commonTextarea"
                android:hint="@string/prompt_description"
                android:background="@drawable/textarea"
                android:scrollHorizontally="false"
                android:gravity="top|left"
                android:layout_gravity="top"
                android:maxLength="500"
                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_activity_date"
            android:layout_below="@+id/til_activity_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/transparent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_activity_date"
                android:layout_below="@+id/til_activity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_activity_date"
                    android:layout_width="247dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:hint="@string/prompt_date"
                    android:maxLength="100"
                    android:enabled="false"/>

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/ib_activity_date"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/prompt_date"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_date_range_white_24dp"
                android:tint="@android:color/black"
                android:scaleType="fitXY"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_color_picker"
            android:layout_below="@+id/ll_activity_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/tv_activity_color"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/color_title"/>

            <ImageView
                android:id="@+id/iv_activity_color"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <ImageButton
                android:id="@+id/ib_activity_color"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/prompt_date"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_color_lens_black_24dp"
                android:tint="@android:color/holo_orange_dark"
                android:scaleType="fitXY"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activity_type"
            android:layout_below="@+id/ll_color_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_activity_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_items"
            android:layout_below="@+id/ll_activity_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:isScrollContainer="false"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_add_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@drawable/ic_add_black_24dp"
                android:tint="@color/floatButtonIconColor"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_save_template"
            android:layout_below="@+id/rl_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_save_template"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkbox_save_template" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activity_buttons"
            android:layout_below="@+id/ll_save_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_save_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save" />
            <Button
                android:id="@+id/bt_cancel_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>


