<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.psm.lifeorganizer.android.fragments.ActivityUseFragment"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout android:id="@+id/rl_activity_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_activity_name"
                android:orientation="horizontal"
                android:layout_alignParentStart="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00f"
                android:elevation="6dp"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_activity_name"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff" />

                <ImageView
                    android:id="@+id/ib_activity_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:tint="@android:color/white"/>

            </LinearLayout>


            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/el_activity_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_activity_name"
                app:el_duration="1000"
                app:el_expanded="false"
                app:el_parallax="0.5"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/ll_activity_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_activity_desc_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_description"/>
                        <TextView
                            android:id="@+id/tv_activity_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Test"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_activity_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_activity_date_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_date"/>
                        <TextView
                            android:id="@+id/tv_activity_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Test"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_activity_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_activity_type_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_type"/>
                        <TextView
                            android:id="@+id/tv_activity_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Test"/>
                    </LinearLayout>
                </LinearLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_items_use"
                android:layout_below="@+id/el_activity_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_complete_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_circle_checked_black_24dp"
        android:tint="@color/colorActivityCompleted"/>

</RelativeLayout>

